tests/ui/on_fn.stderr
error: expected `enum`
 --> tests/ui/on_fn.rs:5:1
  |
5 | fn foo() {}
  | ^^
